log/build_2023-07-28_22-02-50/autoturtle/stderr.log
  File "/root/ros2_ws/install/autoturtle/lib/python3.8/site-packages/autoturtle/swim_school.py", line 18
    if(self.count % 63 == 0)
                           ^
SyntaxError: invalid syntax

